--- a/src/app/styles/confirmacao.css
+++ b/src/app/styles/confirmacao.css
@@ -1,10 +1,12 @@
 /* Seção de Confirmação */
 #confirmacao {
+    padding: 60px 20px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     max-width: 600px;
-    margin: 0 auto;
+    margin: 0 auto 40px auto; 
     text-align: center;
+    height: auto; 
 }
 
 #confirmacao h1 {
