--- a/src/app/styles/presente.css
+++ b/src/app/styles/presente.css
@@ -1,6 +1,6 @@
 .product-card {
     background-color: white;
-    padding: 20px;
+    padding: 60px 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
