--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -133,9 +133,9 @@ a {
     font-size: 2rem;
     color: rgba(48, 63, 22, 0.8);
     font-weight: 700;
-    margin: 40px 0 20px 0; /* Aumenta a margem superior */
+    /* margin: 40px 0 20px 0; Aumenta a margem superior */
     line-height: 1.4;
-    padding: 0 15px; /* Adiciona espaçamento para telas menores */
+    /* padding: 0 15px; Adiciona espaçamento para telas menores */
 }
 
 .versiculo-numero {
