--- a/src/app/styles/scroll.css
+++ b/src/app/styles/scroll.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 30px;
     right: 30px;
-    background-color: #556b2f;
+    background-color: rgb(48, 63, 22);
     color: white;
     width: 50px;
     height: 50px;
@@ -18,7 +18,7 @@
 }
 
 .scroll-to-top:hover {
-    background-color: #6b8e23;
+    background-color: rgb(48, 63, 22);
 }
 
 .scroll-to-top.visible {
