--- a/src/app/home.html
+++ b/src/app/home.html
@@ -75,6 +75,11 @@
         <div class="foto-casal">
             <img src="assets/casal.jpg" alt="CASAL" width="400" height="auto">
         </div>
+        <p class="versiculo">Nem muitas águas conseguem apagar o amor; os rios não conseguem levá-lo
+            na correnteza. Se alguém oferecesse todas as riquezas
+            da sua casa para adquirir o amor, seria totalmente desprezado.
+        </p>
+        <p class="versiculo-numero">Cânticos dos Cânticos 8:9</p>
         <div class="animacao-container">
             <div class="letras">
                 <span class="letra-n">N</span>
