--- a/src/app/styles/nf-animacao.css
+++ b/src/app/styles/nf-animacao.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh; /* Ocupa toda a altura da tela */
+    height: 85vh; /* Ocupa toda a altura da tela */
     background-color: #fff;
     text-align: center;
     padding: 50px 0;
@@ -56,6 +56,24 @@
     animation-delay: 1s;
 }
 
+.versiculo {
+    font-family: "Tangerine", cursive;
+    font-size: 2rem;
+    color: rgb(48, 63, 22);
+    font-weight: 700;
+    /* margin: 40px 0 20px 0; Aumenta a margem superior */
+    line-height: 1.4;
+    /* padding: 0 15px; Adiciona espaçamento para telas menores */
+}
+
+.versiculo-numero {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1rem;
+    color: rgb(48, 63, 22);
+    font-style: italic;
+    margin-bottom: 25px;
+}
+
 /* Animações */
 @keyframes aparecer {
     to {
@@ -72,6 +90,14 @@
     .foto-casal img {
         width: 90%; /* Ajuste da largura da imagem para caber melhor na tela menor */
     }
+
+    .versiculo {
+        font-size: 0.7rem;
+        margin-top: 25px;
+    }
+    .versiculo-numero {
+        font-size: 0.8rem;
+    }
 }
 
 @media only screen and (max-width: 400px) {
@@ -80,5 +106,13 @@
     }
     .foto-casal img {
         width: 85%; /* Reduz um pouco mais a largura da imagem para telas muito pequenas */
+    }
+
+    .versiculo {
+        font-size: 0.6rem;
+        margin-top: 20px;
+    }
+    .versiculo-numero {
+        font-size: 0.7rem;
     }
 }
