--- a/src/app/styles/nf-animacao.css
+++ b/src/app/styles/nf-animacao.css
@@ -86,6 +86,23 @@
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .letras {
+        font-size: 70px;
+    }
+    .foto-casal img {
+        width: 90%; /* Ajuste da largura da imagem para caber melhor na tela menor */
+    }
+
+    .versiculo {
+        font-size: 0.8rem;
+        margin-top: 30px;
+    }
+    .versiculo-numero {
+        font-size: 0.9rem;
+    }   
+}
+
 /* Ajustes para dispositivos móveis */
 @media only screen and (max-width: 500px) {
     .letras {
